# Moss

./: .gitignore  BETA_ROADMAP.md  BRANDING.md  BRANDING_TODO.md  CHANGELOG.md  Callout Demo.md  ISSUES.md  README.md  THEMING.md  index.html  lavender.yaml  nature.yaml  package-lock.json  package.json  repro_flat_sort.js  repro_sorting.js  tailwind.config.js  test-wikilink.js  test_marked_2.mjs  test_marked_anchor.mjs  vite.config.ts
docs/: CHANGELOG.md  FontScaling.md  OPEN_SOURCE.md  SCREENSHOTS.md  UserGuide.md  WikilinkArchitecture.md  github_setup_guide.md  roadmap.md
side_documents/: Ambre_euler_feedback.md  Ambre_feddback_2.md  Ambre_feedback.md  Courir-Library-Capabilities-&-Integration-Guide.md  Mathematics extension.md  Mosaic_euler_feedback.md  Mosaic_feedback.md  Mosaic_feedback_2.md  ROADMAP.md  SPLIT_PANE_prev.md  batch_create_notes_feature.md  finish.md  image_test.md  later.md  lib.rs  portfolio_styles.css  prompt_vault_builder.md  tauri_window_menu.mdx  tiptap_commands.md  tiptap_image.md  tiptap_markdow.md  tiptap_tasklist.md
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_extra.rs  git_manager.rs  github.rs  graph.rs  indexer.rs  lib.rs  main.rs  tags.rs  templates.rs  tools.rs  vector_store.rs  watcher.rs  wikipedia.rs
src-tauri/src/ai/: cerebras.rs  gemini.rs  mod.rs  ollama.rs  openrouter.rs
src/lib/: fs.ts  (+5 more)
themes/: purple-test.yaml  website.yaml
website/: index.html  responsive.css  style.css  styles.css
(+162 files in other folders)
