[package]
name = "moss"
version = "0.1.0"
description = "Moss - A Beautiful Markdown Note-Taking App"
authors = ["Ivan Owono"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"

# AI Integration dependencies
keyring = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
notify = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
html2md = "0.2"
urlencoding = "2.1"
git2 = "0.18"
chrono = "0.4"


